LayoutMenuList::ControlClipRect may depend on size of children

Add NeedsPaintPropertyUpdate().

BUG=721249
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2874413003
Cr-Commit-Position: refs/heads/master@{#471828}