third_party/WebKit/Source/core/paint/PaintPropertyTreeUpdateTests.cpp
@@ -4,6 +4,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // found in the LICENSE file.
 
 #include "core/html/HTMLIFrameElement.h"
+#include "core/html/HTMLSelectElement.h"
 #include "core/paint/PaintPropertyTreeBuilderTest.h"
 #include "core/paint/PaintPropertyTreePrinter.h"
 
@@ -751,6 +752,22 @@ TEST_P(PaintPropertyTreeUpdateTest, Preserve3DChange) {
   GetDocument().View()->UpdateAllLifecyclePhases();
   EXPECT_EQ(transform, child->PaintProperties()->Transform());
   EXPECT_FALSE(transform->FlattensInheritedTransform());
+}
+
+TEST_P(PaintPropertyTreeUpdateTest, MenuListControlClipChange) {
+  SetBodyInnerHTML(
+      "<select id='select' style='white-space: normal'>"
+      "  <option></option>"
+      "  <option>bar</option>"
+      "</select>");
+
+  auto* select = GetLayoutObjectByElementId("select");
+  EXPECT_NE(nullptr, select->PaintProperties()->OverflowClip());
+
+  // Should not assert in FindPropertiesNeedingUpdate.
+  toHTMLSelectElement(select->GetNode())->setSelectedIndex(1);
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  EXPECT_NE(nullptr, select->PaintProperties()->OverflowClip());
 }
 
 }  // namespace blink
